[project]
name = "rl-algorithms"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "gymnasium (>=1.2.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "rl_algorithms", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
torch = { version = "^2.7.1", optional = true }

[tool.poetry.extras]
deep_learning = ["torch"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
